<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AppCompatResource">

    <item
        android:id="@+id/options_search"
        android:title="@string/options_search_title"
        android:icon="@drawable/ic_search"
        android:iconifiedByDefault="true"
        app:showAsAction="ifRoom|collapseActionView"
        android:showAsAction="always|collapseActionView"
        app:iconifiedByDefault="true"
        app:actionLayout="@layout/options_search_layout"
        tools:ignore="AlwaysShowAction"/>
    <!--
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"/>
    -->

    <group
        app:showAsAction="ifRoom"
        android:showAsAction="ifRoom">

        <item
            android:id="@+id/options_export"
            android:title="@string/options_export_title"
            android:icon="@drawable/ic_save" />

        <item
            android:id="@+id/options_about"
            android:title="@string/options_about_title"
            android:icon="@drawable/ic_info" />

    </group>

    <group
        app:showAsAction="never"
        android:showAsAction="never">

        <item
            android:id="@+id/options_bugreport"
            android:title="@string/options_bugreport_title"
            android:visible="false"
            android:enabled="false"
            tools:visible="true"
            tools:enabled="true"/>

        <item
            android:id="@+id/options_theme"
            android:title="@string/options_theme_title">

            <menu>

                <group
                    android:checkable="true"
                    android:checkableBehavior="single">

                    <item
                        android:id="@+id/options_theme_auto"
                        android:title="@string/options_theme_auto_title"
                        android:checked="true" />

                    <item
                        android:id="@+id/options_theme_light"
                        android:title="@string/options_theme_light_title"
                        android:checked="false" />

                    <item
                        android:id="@+id/options_theme_dark"
                        android:title="@string/options_theme_dark_title"
                        android:checked="false" />

                </group>

            </menu>

        </item>

    </group>

</menu>